--- a/src/app/page-four/page-four.scss
+++ b/src/app/page-four/page-four.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     overflow-y: scroll;
-    background-image: url(../../assets/WhatsApp\ Image\ 2025-07-03\ at\ 20.12.50_1edd42a7.jpg);
+    background-image: url("https://ik.imagekit.io/ozrxwulka/WhatsApp%20Image%202025-07-03%20at%2020.12.50_1edd42a7.jpg?updatedAt=1759337839005");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -235,7 +235,7 @@
     width: 100%;
     height: 600px;
     max-width: 865px;
-    margin: 0 auto;
+    margin: 0 auto 30px;
 }
 
 /* PART SIX */
