--- a/src/app/page-three/page-three.scss
+++ b/src/app/page-three/page-three.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     overflow-y: scroll;
-    background-image: url(../../assets/WhatsApp\ Image\ 2025-07-03\ at\ 20.10.22_5dd9dc43.jpg);
+    background-image: url("https://ik.imagekit.io/ozrxwulka/WhatsApp%20Image%202025-07-03%20at%2020.10.22_5dd9dc43.jpg?updatedAt=1759337417662");
     background-size: cover;
     background-repeat: no-repeat;
 }
